# Capstone-Prototype

./: .gitignore  guess_img.py  main.py  making_model.py  requirements.txt
Model-Creation/: main.py  making_model.py  requirements.txt
OpenCV-Program/: .gitignore  CMakeLists.txt  Makefile
OpenCV-Program/src/: main.cpp
